# bioinf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: compile.sh  dl_bacteria.sh  gen_all.sh  gen_rand.sh  tests.py
src/: algorithms.cpp  algorithms.h  alphabet_util.cpp  alphabet_util.h  bitmask.cpp  bitmask.h  main.cpp  sais.hpp  wavelet.cpp  wavelet.h
